WooCommerce Fixes (#315)
* Use wide layout for woocommerce pages.

* Fix sizing of select-menu

* center pagination links

* Fix woocommerce page titles.

* Ensure all woocommerce page elements fall within wide layout.

* Remove excessive whitespace on woocommerce pages.

* Remove margin from quantity form input

* Increase quantity input width to prevent value from being cut-off.

* Fix coupon code input

* Fix form input spacing.

* Fix select2 input size, borders, and spacing.

* Style tweaks

* Unify CSS comment style (matched to Gravity Forms). Tweaked styles on the account page.

* Tweaks

* Add :not(.woocommerce-page) to exclude woocommerce pages from .has-featured-image styles

* Tweaks

* Tweak link colors on specific woo pages

* Tweak x color in cart table

--- a/.dev/assets/shared/css/woocommerce/layout.css
+++ b/.dev/assets/shared/css/woocommerce/layout.css
@@ -1,20 +1,56 @@
-/**
- * WooCommerce Global - layout
- *
- * Global overrides to general layout
-*/
+/*! WooCommerce: Layout */
+.content-area .woocommerce {
+	max-width: var(--theme-max-w-wide);
+}
 
-.content-area--woocommerce {
+.woocommerce {
+
+	& .woocommerce-result-count {
+		margin-top: 1em;
+	}
+
+	& .woocommerce-ordering {
+		margin: 0;
+	}
 
 	& .page-title {
 		text-align: center;
 	}
 }
 
-.woocommerce ul.products {
-	margin-bottom: 2rem;
+.woocommerce .product .onsale {
+	@mixin on-sale-badge;
 
-	@media (--medium) {
-		margin-bottom: 2rem;
+	left: 1em;
+	top: 1em;
+}
+
+.woocommerce.single-product .product > .onsale {
+	@media (--large) {
+		@mixin on-sale-badge-lg;
+
+		left: 30px;
+		top: 30px;
 	}
+}
+
+.woocommerce ul.products li.product .onsale {
+	right: 1em;
+	top: 1em;
+}
+
+.woocommerce .woocommerce-thankyou-order-details {
+	padding-left: 0;
+}
+
+.cart_item a,
+.shipping-calculator-button,
+.woocommerce .posted_in a,
+.woocommerce div.product p.price,
+.woocommerce div.product span.price,
+.woocommerce ul.products li.product .price,
+.woocommerce .woocommerce-MyAccount-navigation a,
+.woocommerce .woocommerce-MyAccount-content a,
+.woocommerce .woocommerce-order a {
+	color: hsl(var(--theme-color-primary));
 }
